[package]
name = "ruroonga_client"
version = "0.4.1"
description = "A tiny Groonga HTTP client."
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
keywords = ["groonga"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/cosmo0920/ruroonga_client"

[dependencies]
hyper = "~0.8.0"
url = "~1.0.0"
json_flex = "0.3.2"
